# ai-rag-knowledge-analyst

./: .gitignore  AGENTS.md  AI-powered RAG Business Report Analyst.html  AI-powered RAG Business Report Analyst.ipynb  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.cursor/rules/: 00-always.mdc  rag.mdc  tests.mdc  writing-rules.mdc
notebooks/exploration/: AI-powered RAG Business Report Analyst.ipynb
src/rag_analyst/: config.py  evaluation.py  ingest.py  response.py  retrieval.py  runner.py
tests/: conftest.py  test_ingest.py
